Fixes alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,7 +46,7 @@ nav {
 .calendar{
   margin: 10px;
   position: relative;
-  left: 20%;
+  left: 10%;
   bottom: 20px;
 }
 
@@ -63,14 +63,12 @@ nav {
 }
 
 .navbar {
-  background: lightblue;
+  background: blue;
   margin: 10px;
 }
 
 #day-headings {
-  background: lightblue;
-  color: black;
-  font-size: 0.50em;
+  background: blue;
 }
 
 #submit-form {
@@ -79,7 +77,7 @@ nav {
 
 #date-display {
   position: absolute;
-  left: 39%;
+  left: 29%;
   font-size: 30px;
   transition: 0.5s;
 }
@@ -97,6 +95,13 @@ nav {
 	margin: 20px;
 }
 
+#panel-day-heading {
+  color: white;
+  font-size: 140%;
+  text-align: center;
+  line-height: 3.6em;
+}
+
 #date-holder {
   position: absolute;
   color: black;
@@ -112,18 +117,23 @@ nav {
   top: 80px;
   right: 0px;
   height: 90%;
-  width: 21.8%;
+  width: 31.8%;
   background: white;
+}
+
+#side-display {
+  position: absolute;
+  left: 5%;
+  top: 2%;
+  background: blue;
+  color: white;
+  height: 80%;
+  width: 90%;
+  border: 1px solid black;
 }
 
 .row .col {
   padding: 0px;
-}
-
-#modal-submit {
-  background: lightblue;
-  position: relative;
-  left: 25px;
 }
 
 .materialbox-caption {
@@ -138,5 +148,14 @@ nav {
 
 #modal-submit {
   position: absolute;
-  left: 45.8%;
+  left: 35.8%;
+  background: blue;
+}
+
+#side-nav {
+  position: absolute;
+  top: 10%;
+  left: 0px;
+  height: 50%;
+  width: 10%;
 }
